--- a/pom.xml
+++ b/pom.xml
@@ -177,5 +177,14 @@
 			<version>1.2</version>
 		</dependency>
 
+        <!-- lombok -->
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.10</version>
+        </dependency>
+
+
 	</dependencies>
 </project>
