--- a/pom.xml
+++ b/pom.xml
@@ -68,11 +68,17 @@
 		</dependency>
 
 		<!-- Apache POI对Excel编程 -->
-		<dependency>
-			<groupId>org.apache.poi</groupId>
-			<artifactId>poi</artifactId>
-			<version>3.9</version>
-		</dependency>
+		 <dependency>
+         <groupId>org.apache.poi</groupId>
+         <artifactId>poi</artifactId>
+         <version>3.10-FINAL</version>
+         </dependency>
+
+      <dependency>
+        <groupId>org.apache.poi</groupId>
+         <artifactId>poi-ooxml</artifactId>
+         <version>3.10-FINAL</version>
+       </dependency>
 		
 		<!--PDF引用 开始 -->
 		<dependency>
@@ -178,13 +184,17 @@
 		</dependency>
 
         <!-- lombok -->
-
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.16.10</version>
         </dependency>
 
+       <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.7</version>
+   </dependency>
 
 	</dependencies>
 </project>
